--- a/navHeader.html
+++ b/navHeader.html
@@ -106,24 +106,24 @@
 
 </head>
 
-<div class="noScroll">
-    <!-- Home -->
-    <a href="index.html" alt="Home" target="_parent"><button class="accordion-esc">Home</button></a>
+<body class="noScroll">
 
-    <h3>HTML/CSS/JavaScript</h3>
+    <h3>AUSTIN'S FITNESS</h3>
+
+    <a href="index.html" alt="Dashboard"><button class="accordion-esc">Dashboard</button></a>
 
     <!-- Drop Down 01 -->
-    <button class="accordion">01 Intro to HTML/CSS/JS</button>
+    <button class="accordion">Log</button>
     <div class="panel">
         <ul>
-            <a href="01 HTML, CSS, & JavaScript/Page01.html" alt="Page 01">
-                <li>01.01 - HTML/CSS/JS</li>
+            <a href="" alt="Submit Workout">
+                <li>Submit Workout</li>
             </a>
-            <a href="01 HTML, CSS, & JavaScript/Page02.html" alt="Page 02">
-                <li>01.02 - CSS Directories</li>
+            <a href="" alt="Random Workout">
+                <li>Random Workout</li>
             </a>
-            <a href="01 HTML, CSS, & JavaScript/Page03.html" alt="Page 03">
-                <li>01.03 - JavaScript Directories</li>
+            <a href="" alt="Wendler Calculator">
+                <li>Wendler Calculator</li>
             </a>
         </ul>
     </div>
@@ -217,6 +217,6 @@
         }
     </script>
 
-</div>
+</body>
 
 </html>
