--- a/indexBody.html
+++ b/indexBody.html
@@ -2,67 +2,70 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>Austin's Fitness</title>
-    <meta name="author" content="Austin Greer" />
-    <meta name="description" content="Fitness Data" />
+  <meta charset="utf-8" />
+  <title>Austin's Fitness</title>
+  <meta name="author" content="Austin Greer" />
+  <meta name="description" content="Fitness Data" />
 
-    <link href="./styles.css" type="text/css" rel="stylesheet" />
+  <link href="./styles.css" type="text/css" rel="stylesheet" />
 
-    <style type="text/css">
-        table,
-        table tr,
-        table td {
-            border: 1px solid black;
-        }
+  <style type="text/css">
+    table,
+    table tr,
+    table td {
+      border: 1px solid black;
+    }
 
-        #myBtn {
-            display: none;
-            position: fixed;
-            bottom: 3%;
-            right: 3%;
-            z-index: 99;
-            font-size: 10px;
-            border: none;
-            outline: none;
-            background-color: #FFCC00;
-            color: black;
-            cursor: pointer;
-            padding: 10px 20px;
-        }
+    #myBtn {
+      display: none;
+      position: fixed;
+      bottom: 3%;
+      right: 3%;
+      z-index: 99;
+      font-size: 10px;
+      border: none;
+      outline: none;
+      background-color: #ffcc00;
+      color: black;
+      cursor: pointer;
+      padding: 10px 20px;
+    }
 
-        #myBtn:hover {
-            background-color: tomato;
-        }
-    </style>
+    #myBtn:hover {
+      background-color: tomato;
+    }
+  </style>
 
-    <script type="text/javascript">
-        // When the user scrolls down 'x'px from the top of the document, show the button
-        window.onscroll = function () { scrollFunction() };
+  <script type="text/javascript">
+    // When the user scrolls down 'x'px from the top of the document, show the button
+    window.onscroll = function () {
+      scrollFunction();
+    };
 
-        function scrollFunction() {
-            if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-                document.getElementById("myBtn").style.display = "block";
-            } else {
-                document.getElementById("myBtn").style.display = "none";
-            }
-        }
+    function scrollFunction() {
+      if (
+        document.body.scrollTop > 100 ||
+        document.documentElement.scrollTop > 100
+      ) {
+        document.getElementById("myBtn").style.display = "block";
+      } else {
+        document.getElementById("myBtn").style.display = "none";
+      }
+    }
 
-        // When the user clicks on the button, scroll to the top of the document
-        function topFunction() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-    </script>
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
+  </script>
 </head>
 
 <body>
-    <header>
-    </header>
+  <header></header>
 
-    <main>
-
-        <!--
+  <main>
+    <!--
         <div class='backgroundPlus'>
             &nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<br/><br/><br/>
             &nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<br/><br/><br/>
@@ -87,119 +90,95 @@
             &nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<br/><br/><br/>
         </div> -->
 
-        <!-- Return to Top Button -->
-        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <!-- Return to Top Button -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
-        <div class="center">
-            user://austin_<b>GREER</b>
+    <div class="center">user://austin_<b>GREER</b></div>
+
+    <div>
+      <table style="margin: 50px auto">
+        <caption>
+          Site Hex Values
+        </caption>
+        <tr>
+          <td>Name</td>
+          <td>Hex Code</td>
+          <td>Color</td>
+        </tr>
+        <tr>
+          <td>Mint Cream</td>
+          <td>#F7FFF6</td>
+          <td style="background-color: #f7fff6"></td>
+        </tr>
+        <tr>
+          <td>Magic Mint</td>
+          <td>#BCEBCB</td>
+          <td style="background-color: #bcebcb"></td>
+        </tr>
+        <tr>
+          <td>Dark Sea Green</td>
+          <td>#87D68D</td>
+          <td style="background-color: #87d68d"></td>
+        </tr>
+        <tr>
+          <td>Foliage Green</td>
+          <td>#93B48B</td>
+          <td style="background-color: #93b48b"></td>
+        </tr>
+        <tr>
+          <td>Gray Blue</td>
+          <td>#8491A3</td>
+          <td style="background-color: #8491a3"></td>
+        </tr>
+        <tr>
+          <td>Warning Yellow</td>
+          <td>#FFCC00</td>
+          <td style="background-color: #ffcc00"></td>
+        </tr>
+      </table>
+    </div>
+
+    <div class="center">
+      <span class="center" style="font-weight: bolder">Persistence, <i>not</i> intelligence, will determine your success
+        (in
+        this industry).</span>
+    </div>
+
+    <!-- Start Banner -->
+    <div>
+      <h3 id="body01"></h3>
+      <p id="body02"></p>
+      <p id="body03"></p>
+      <p id="body04"></p>
+      <h4 id="body05"></h4>
+      <p id="body06"></p>
+      <p id="body07"></p>
+
+      <div class="button-box">
+        <a href=""><button class="ios-button">Copy-edit</button></a>
+        <a href=""><button class="mac-button">Revise</button></a>
+        <a href=""><button class="mac-button">To page 2</button></a>
+      </div>
+    </div>
+
+    <!-- Start Section Three: Supercharge your workflow -->
+    <section class="feature supercharge-workflow">
+      <div class="columns">
+        <div class="col create-blacklists">
+          <img src="img/icon-blacklist.svg" alt="" />
+          <h4 id="body08"></h4>
         </div>
-
-        <div>
-            <table style="margin: 50px auto;">
-                <caption>Site Hex Values</caption>
-                <tr>
-                    <td>Name</td>
-                    <td>Hex Code</td>
-                    <td>Color</td>
-                </tr>
-                <tr>
-                    <td>Mint Cream</td>
-                    <td>#F7FFF6</td>
-                    <td style="background-color: #F7FFF6;"></td>
-                </tr>
-                <tr>
-                    <td>Magic Mint</td>
-                    <td>#BCEBCB</td>
-                    <td style="background-color: #BCEBCB;"></td>
-                </tr>
-                <tr>
-                    <td>Dark Sea Green</td>
-                    <td>#87D68D</td>
-                    <td style="background-color: #87D68D;"></td>
-                </tr>
-                <tr>
-                    <td>Foliage Green</td>
-                    <td>#93B48B</td>
-                    <td style="background-color: #93B48B;"></td>
-                </tr>
-                <tr>
-                    <td>Gray Blue</td>
-                    <td>#8491A3</td>
-                    <td style="background-color: #8491A3;"></td>
-                </tr>
-                <tr>
-                    <td>Warning Yellow</td>
-                    <td>#FFCC00</td>
-                    <td style="background-color: #FFCC00;"></td>
-                </tr>
-            </table>
+        <div class="col plain-snippets">
+          <img src="img/icon-text.svg" alt="" />
+          <h4 id="body09"></h4>
         </div>
-
-        <div class="center">
-            <span class="center" style="font-weight: bolder;">Persistence, <i>not</i> intelligence, will determine your
-                success (in this industry).</span>
+        <div class="col sneak-preview">
+          <img src="img/icon-preview.svg" alt="" />
+          <h4 id="body10"></h4>
         </div>
-
-        <!-- Start Banner -->
-        <div class="banner">
-            <img src="img/logo.svg" alt="" class="logo" />
-            <h1 id="header" class="banner-header"></h1>
-            <p id="header2" class="banner-paragraph"></p>
-
-            <!--
-            <div class="button-box">
-                <a href="#"><button class="ios-button">Copy-edit</button></a>
-                <a href="#"><button class="mac-button">Revise</button></a>
-                <a href="fitness/index2.html"><button class="mac-button">To page 2</button></a>
-            </div>
-            -->
-        </div>
-        
-        <!-- Start Section One: Keep track of your snippets -->
-        <section class="feature">
-            <div class="intro-text">
-                <h3 id="body01"></h3>
-                <p id="body02"></p>
-            </div>
-
-            <div class="track-snippets">
-                <div class="snippet-left"><img src="img/image-computer.png" alt="computer" /></div>
-                <div class="snippet-right">
-                    <div>
-                        <p id="body03"></p>
-                        <p id="body04"></p>
-                    </div>
-                    <div>
-                        <h4 id="body05"></h4>
-                        <p id="body06"></p>
-                        <p id="body07"></p>
-                    </div>
-                    <div>
-                        
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Start Section Three: Supercharge your workflow -->
-        <section class="feature supercharge-workflow">
-            <div class="columns">
-                <div class="col create-blacklists">
-                    <img src="img/icon-blacklist.svg" alt="" />
-                    <h4 id="body08"></h4>
-                </div>
-                <div class="col plain-snippets">
-                    <img src="img/icon-text.svg" alt="" />
-                    <h4 id="body09"> </h4>
-                </div>
-                <div class="col sneak-preview">
-                    <img src="img/icon-preview.svg" alt="" />
-                    <h4 id="body10"></h4>
-                </div>
-            </div>
-        </section>
-
-    </main>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
