--- a/navHeader.html
+++ b/navHeader.html
@@ -111,91 +111,24 @@
     <h3>AUSTIN'S FITNESS</h3>
 
     <a href="index.html" alt="Dashboard"><button class="accordion-esc">Dashboard</button></a>
-
-    <!-- Drop Down 01 -->
     <button class="accordion">Log</button>
     <div class="panel">
         <ul>
-            <a href="" alt="Submit Workout">
-                <li>Submit Workout</li>
-            </a>
-            <a href="" alt="Random Workout">
-                <li>Random Workout</li>
-            </a>
-            <a href="" alt="Wendler Calculator">
-                <li>Wendler Calculator</li>
-            </a>
+            <a href="" alt="Submit Workout"><li>Submit Workout</li></a>
+            <a href="" alt="Random Workout"><li>Random Workout</li></a>
+            <a href="" alt="Wendler Calculator"><li>Wendler Calculator</li></a>
         </ul>
     </div>
-
-    <!-- Drop Down 02 -->
-    <button class="accordion">02 Web Basics HTML/CSS</button>
+    <a href="" alt="PRs"><button class="accordion-esc">PRs</button></a>
+    <a href="" alt="Hero WoDs"><button class="accordion-esc">Hero WoDs</button></a>
+    <button class="accordion">Competitions</button>
     <div class="panel">
         <ul>
-            <a href="02 HTML Beginner/Page04.html" alt="Page 04" target="MainFrame">
-                <li>02.04 - Page Layouts</li>
-            </a>
-            <a href="02 HTML Beginner/Page05.html" alt="Page 05" target="MainFrame">
-                <li>02.05 - Semantics & Lists</li>
-            </a>
-            <li>
-                <a href="02 HTML Beginner/Page06.html" alt="Page 06" target="MainFrame">02.06 - Anchors</a> |
-                <a href="02 HTML Beginner/Page06.html#paraB" alt="Page 06" target="MainFrame">#ParaB</a>
-            </li>
-            </a>
-            <a href="02 HTML Beginner/Page07.html" alt="Page 07" target="MainFrame">
-                <li>02.07 - Metadata & Tables</li>
-            </a>
-            <a href="02 HTML Beginner/Page08.html" alt="Page 08" target="MainFrame">
-                <li>02.08 - Images</li>
-            </a>
-            <a href="02 HTML Beginner/Page09.html" alt="Page 09" target="MainFrame">
-                <li>02.09 - Accessability</li>
-            </a>
-        </ul>
-    </div>
-
-    <!-- Drop Down 03 -->
-    <button class="accordion">03 CSS Basics</button>
-    <div class="panel">
-        <ul>
-            <a href="03 CSS Basics/Page10.html" alt="Page 10" target="MainFrame">
-                <li>03.10 - CSS Info</li>
-            </a>
-            <a href="03 CSS Basics/Page11.html" alt="Page 11" target="MainFrame">
-                <li>03.11 - Sans Forgetica</li>
-            </a>
-            <a href="03 CSS Basics/Page12.html" alt="Page 12" target="MainFrame">
-                <li>03.12 - Forms</li>
-            </a>
-        </ul>
-    </div>
-
-    <!-- Drop Down 04-->
-    <button class="accordion">04 JavaScript Basic</button>
-    <div class="panel">
-        <ul>
-            <a href="04 JavaScript Basics/Page13.html" alt="Page 13" target="MainFrame">
-                <li>04.13 - Intro</li>
-            </a>
-            <a href="04 JavaScript Basics/Page14.html" alt="Page 14" target="MainFrame">
-                <li>04.14 - Types & Arrays</li>
-            </a>
-            <a href="04 JavaScript Basics/Page15.html" alt="Page 15" target="MainFrame">
-                <li>04.15 - Program Flow</li>
-            </a>
-            <a href="04 JavaScript Basics/Page16.html" alt="Page 16" target="MainFrame">
-                <li>04.16 - Functions</li>
-            </a>
-            <a href="04 JavaScript Basics/Page17.html" alt="Page 17" target="MainFrame">
-                <li>04.17 - Objects</li>
-            </a>
-            <a href="04 JavaScript Basics/Page18.html" alt="Page 18" target="MainFrame">
-                <li>04.18 - Programming for Web Pages</li>
-            </a>
-            <a href="04 JavaScript Basics/Blackjack.html" alt="Blackjack" target="MainFrame">
-                <li>Blackjack</li>
-            </a>
+            <a href="" alt=""><li>2020 Kickin' It Oldschool</li></a>
+            <a href="" alt=""><li>2020 Crossfit Open</li></a>
+            <a href="" alt=""><li>2019 Crossfit Open</li></a>
+            <a href="" alt=""><li>2019 Crossfitting 4 Cures</li></a>
+            <a href="" alt=""><li>2018 Crossfit Open</li></a>
         </ul>
     </div>
 
