--- a/indexBody.html
+++ b/indexBody.html
@@ -146,13 +146,13 @@
 
     <!-- Start Banner -->
     <div>
-      <h3 id="body01"></h3>
-      <p id="body02"></p>
-      <p id="body03"></p>
-      <p id="body04"></p>
-      <h4 id="body05"></h4>
-      <p id="body06"></p>
-      <p id="body07"></p>
+      <h3 id="data01"></h3>
+      <p id="data02"></p>
+      <p id="data03"></p>
+      <p id="data04"></p>
+      <h4 id="data05"></h4>
+      <p id="data06"></p>
+      <p id="data07"></p>
 
       <div class="button-box">
         <a href=""><button class="ios-button">Copy-edit</button></a>
@@ -166,15 +166,15 @@
       <div class="columns">
         <div class="col create-blacklists">
           <img src="img/icon-blacklist.svg" alt="" />
-          <h4 id="body08"></h4>
+          <h4 id="data08"></h4>
         </div>
         <div class="col plain-snippets">
           <img src="img/icon-text.svg" alt="" />
-          <h4 id="body09"></h4>
+          <h4 id="data09"></h4>
         </div>
         <div class="col sneak-preview">
           <img src="img/icon-preview.svg" alt="" />
-          <h4 id="body10"></h4>
+          <h4 id="data10"></h4>
         </div>
       </div>
     </section>
