--- a/navFooter.html
+++ b/navFooter.html
@@ -10,11 +10,18 @@
 </head>
 
 <div>
-    <ul>        
-        <li>Link 1</li>
-        <li>Link 2</li>
-        <li>Link 3</li>
-    </ul>
+    Weekly Schdeule:<br/>
+    <br/>
+    MON-TUE-THR-FRI: 5a, 6a, 7a, 8a // 12p // 3:15p, 4:15p, 5:15p, 6:15p<br/>
+    WED: Open Gym - 5:30-8a // 11:45-1p // 4-6:30p<br/>
+    SAT: 7a, 8a, 9,a 10a<br/>
+    SUN: Open Gym - 1p-3:30p (*Closed every first Sunday of the month)
+</div>
+
+<div>
+    Date Started: 2017/05/30<br/>
+    <br/>
+    Home Box: Crossfit Old School - Bowling Green, KY - USA
 </div>
 
 </html>
