--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Austin Greer" />
-    <meta name="description" content="Austin\'s Test Dev Website" />
+    <meta name="description" content="Austin's Fitness" />
 
     <title>Austin Greer Fitness</title>
 
