--- a/navHeader.html
+++ b/navHeader.html
@@ -110,7 +110,7 @@
 
     <h3>AUSTIN'S FITNESS</h3>
 
-    <a href="/dashboard/index.html" alt="Dashboard"><button class="accordion-esc">Dashboard</button></a>
+    <a href="dashboard/index.html" alt="Dashboard"><button class="accordion-esc">Dashboard</button></a>
     <button class="accordion">Log</button>
     <div class="panel">
         <ul>
