--- a/navFooter.html
+++ b/navFooter.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="author" content="Austin Greer" />
-    <meta name="description" content="Navigation" />
+<body class="w3-light-grey">
+    <div class="w3-main" style="margin-left:300px;margin-top:43px;">
 
-    <link href="./styles.css" type="text/css" rel="stylesheet" />
-</head>
-
-<div>
-    Weekly Schdeule:<br/>
-    <br/>
-    MON-TUE-THR-FRI: 5a, 6a, 7a, 8a // 12p // 3:15p, 4:15p, 5:15p, 6:15p<br/>
-    WED: Open Gym - 5:30-8a // 11:45-1p // 4-6:30p<br/>
-    SAT: 7a, 8a, 9,a 10a<br/>
-    SUN: Open Gym - 1p-3:30p (*Closed every first Sunday of the month)
-</div>
-
-<div>
-    Date Started: 2017/05/30<br/>
-    <br/>
-    Home Box: Crossfit Old School - Bowling Green, KY - USA
-</div>
+        <div class="w3-container w3-dark-grey w3-padding-32">
+            <div class="w3-row">
+                <div class="w3-container w3-third">
+                    <h5 class="w3-bottombar w3-border-green">Weekly Schdeule</h5>
+                    <p>MON-TUE-THR-FRI:<br />5a, 6a, 7a, 8a // 12p // 3:15p, 4:15p, 5:15p, 6:15p</p>
+                    <p>WED:<br />Open Gym - 5:30-8a // 11:45-1p // 4-6:30p</p>
+                    <p>SAT:<br />7a, 8a, 9,a 10a</p>
+                    <p>SUN:<br />Open Gym - 1p-3:30p<br />(*closed every first Sunday of the month)</p>
+                </div>
+                <div class="w3-container w3-third">
+                    <h5 class="w3-bottombar w3-border-red">Information</h5>
+                    <p>Date Started:<br />2017/05/30</p>
+                    <p>Home Box:<br />Crossfit Old School - Bowling Green, KY - USA</p>
+                    <p></p>
+                </div>
+                <div class="w3-container w3-third">
+                    <h5 class="w3-bottombar w3-border-orange">Target</h5>
+                    <p>Users</p>
+                    <p>Active</p>
+                    <p>Geo</p>
+                    <p>Interests</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 
 </html>
