--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
+<title>Austin's Fitness</title>
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
     <meta name="author" content="Austin Greer" />
-    <meta name="description" content="Austin's Fitness" />
+    <meta name="description" content="Navigation" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Austin Greer Fitness</title>
-
-    <!-- displays site properly based on user's device -->
     <link rel="icon" href="" type="image/png" sizes="32x32" />
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bai+Jamjuree:400,600&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/main.css">
+
+    <style>
+        html, body, h1, h2, h3, h4, h5 {
+            font-family: "Raleway", sans-serif
+        }
+    </style>
 
     <script src="https://code.jquery.com/jquery-1.10.2.js" language="javascript">
         $(function () {
@@ -26,7 +34,7 @@
 
     <script>
         $(function () {
-            $("#navH").load("navHeader.html");
+            $("#navL").load("leftNav.html");
         });
     </script>
 
@@ -44,8 +52,9 @@
 
 </head>
 
-<body>
-    <div id="navH"></div>
+<body class="w3-light-grey">
+
+    <div id="navL"></div>
 
     <div id="body"></div>
 
@@ -53,6 +62,7 @@
 
     <script src="main.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+
 </body>
 
 </html>
