--- a/leftNav.html
+++ b/leftNav.html
@@ -17,8 +17,7 @@
 
         <!-- Top container -->
         <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
-            <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey"
-                onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>
+            <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>
             <span class="w3-bar-item w3-right">Logo</span>
         </div>
 
@@ -39,33 +38,41 @@
             <div class="w3-container">
                 <h5>Menu</h5>
             </div>
+
             <div class="w3-bar-block">
                 <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
-                <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-home fa-fw"></i> Dashboard</a>
-                <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa fa-book fa-fw"></i>  Log</a>
-
-                <p>Submit Workout<br />
-                    Random Workout<br />
-                    Wendler Calculator</p>
+                <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-home fa-fw"></i>
+                    Dashboard</a>
+                
+                <!-- Accordian -->
+                <a onclick="myAccFunc('acc1')" class="w3-bar-item w3-button w3-padding"><i class="fa fa fa-book fa-fw"></i>  Log</a>
+                <div id="acc1" class="w3-hide">
+                    <a href="" class="w3-bar-item w3-button">Submit Workout</a>
+                    <a href="" class="w3-bar-item w3-button">Random Workout</a>
+                    <a href="" class="w3-bar-item w3-button">Wendler Calculator</a>
+                </div>
 
                 <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-child fa-fw"></i>  Personal Records</a>
-                <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-globe fa-fw"></i> Competitions</a>
+                <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-child fa-fw"></i>  Hero WODs</a>
 
-                <p>2020 Kickin' It Oldschool<br />
-                    2020 Crossfit Open<br />
-                    2019 Crossfit Open<br />
-                    2019 Crossfitting 4 Cures<br />
-                    2018 Crossfit Open</p>
+                <!-- Accordian -->
+                <a onclick="myAccFunc('acc2')" class="w3-bar-item w3-button w3-padding"><i class="fa fa-globe fa-fw"></i> Competitions</a>
+                <div id="acc2" class="w3-hide">
+                    <a href="" class="w3-bar-item w3-button">2020 Kickin' It Oldschool</a>
+                    <a href="" class="w3-bar-item w3-button">2020 Open</a>
+                    <a href="" class="w3-bar-item w3-button">2019 Open</a>
+                    <a href="" class="w3-bar-item w3-button">2019 Crossfitting 4 Cures</a>
+                    <a href="" class="w3-bar-item w3-button">2018 Open</a>
+                </div>
 
-                <a href="/" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i> Settings</a>
+                <!-- <a href="" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i> Settings</a> -->
 
             </div>
         </nav>
 
 
         <!-- Overlay effect when opening sidebar on small screens -->
-        <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer"
-            title="close side menu" id="myOverlay"></div>
+        <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
     </div>
 
@@ -95,21 +102,15 @@
         }
     </script>
 
-    <!-- Script for accordian dropdowns -->
-    <script type="text/javascript">
-        var acc = document.getElementsByClassName("accordion");
-        var i;
-
-        for (i = 0; i < acc.length; i++) {
-            acc[i].addEventListener("click", function () {
-                this.classList.toggle("active");
-                var panel = this.nextElementSibling;
-                if (panel.style.maxHeight) {
-                    panel.style.maxHeight = null;
-                } else {
-                    panel.style.maxHeight = panel.scrollHeight + "px";
-                }
-            });
+    <!-- Accordians -->
+    <script>
+        function myAccFunc(id) {
+            var x = document.getElementById(id);
+            if (x.className.indexOf("w3-show") == -1) {
+                x.className += " w3-show";
+            } else {
+                x.className = x.className.replace(" w3-show", "");
+            }
         }
     </script>
 
