--- a/leftNav.html
+++ b/leftNav.html
@@ -53,7 +53,7 @@
                 </div>
 
                 <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-child fa-fw"></i>  Personal Records</a>
-                <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-child fa-fw"></i>  Hero WODs</a>
+                <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bolt fa-fw"></i>  Hero WODs</a> <!-- fa-flag // fa-trophy // fas fa-dumbbell //fa-universal-access -->
 
                 <!-- Accordian -->
                 <a onclick="myAccFunc('acc2')" class="w3-bar-item w3-button w3-padding"><i class="fa fa-globe fa-fw"></i> Competitions</a>
@@ -64,6 +64,8 @@
                     <a href="" class="w3-bar-item w3-button">2019 Crossfitting 4 Cures</a>
                     <a href="" class="w3-bar-item w3-button">2018 Open</a>
                 </div>
+
+                <a href="/soccer/profile.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-futbol-o fa-fw"></i>  Soccer Profile</a>
 
                 <!-- <a href="" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i> Settings</a> -->
 
