--- a/leftNav.html
+++ b/leftNav.html
@@ -65,7 +65,7 @@
                     <a href="" class="w3-bar-item w3-button">2018 Open</a>
                 </div>
 
-                <a href="/soccer/profile.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-futbol-o fa-fw"></i>  Soccer Profile</a>
+                <a href="/soccer/index.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-futbol-o fa-fw"></i>  Soccer Profile</a>
 
                 <!-- <a href="" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i> Settings</a> -->
 
