--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
-
-<title>Austin's Fitness</title>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Austin's Fitness</title>
     <meta name="author" content="Austin Greer" />
     <meta name="description" content="Navigation" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="icon" href="" type="image/png" sizes="32x32" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -17,7 +18,13 @@
     <link rel="stylesheet" href="css/main.css">
 
     <style>
-        html, body, h1, h2, h3, h4, h5 {
+        html,
+        body,
+        h1,
+        h2,
+        h3,
+        h4,
+        h5 {
             font-family: "Raleway", sans-serif
         }
     </style>
@@ -54,11 +61,13 @@
 
 <body class="w3-light-grey">
 
-    <div id="navL"></div>
+    <main>
+        <div id="navL"></div>
 
-    <div id="body"></div>
+        <div id="body"></div>
 
-    <div id="navF"></div>
+        <div id="navF"></div>
+    </main>
 
     <script src="main.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
