--- a/indexBody.html
+++ b/indexBody.html
@@ -65,6 +65,7 @@
     <!-- Header -->
     <header class="w3-container" style="padding-top:22px">
       <h5><b><i class="fa fa-dashboard"></i> My Dashboard</b></h5>
+      Energy can only, be transfered - not destroyed.<br /><br />
     </header>
 
     <div class="w3-row-padding w3-margin-bottom">
@@ -175,7 +176,10 @@
       <p id="data08"></p>
       <p id="data09"></p>
       <p id="data10"></p>
+      <p id="data11"></p>
     </div>
+
+    https://www.polar.com/blog/running-heart-rate-zones-basics/
 
     <div class="w3-container">
       Persistence, <i>not</i> intelligence, will determine your success (in this industry).
@@ -370,6 +374,23 @@
           <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><br>
         </div>
       </div>
+    </div>
+
+
+    <div>
+      TEMPLATE:<br />
+      https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_analytics&stacked=h<br />
+      <br />
+      IMPORT RANGE:<br />
+      https://support.google.com/docs/answer/3093340<br />
+      <br /><br /><br /><br />
+    </div>
+
+    <div>
+      Quotes:<br />
+      Nobody is too busy. It's all about priorities - Connor McGregor<br /><br />
+      You have to work with your build. Everyone is not going to be exactly the same. And too often I think a cookie-cutter mold is pushed on lifts, and if you don't do it this way you're wrong. Sometimes people end up hurting themselves when they are trying to fit into that mold, and they shouldn't - Brian Shaw<br /><br />
+      Some art/stories should be a mirror -or- a cautionary tale. That's what the best art does, it get's you to look at a reflection of yourself, your family, or your society to give you a different point of view. (aka allegory) - girl from The Expanse
     </div>
 
   </div>
